--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,13 @@
 pipeline{
   agent any
   stages{
-    stage(Hello World){
+    stage('Hello World'){
     steps{
       sh 'echo hello world'
       }
     }
  stages{
-    stage(Hello World2){
+    stage('Hello World2'){
     steps{
       sh 'echo hello world2'
       }
